tests/fixtures/validate/lenient/invalid/invalid-object-literal-1.yini
^ App
title = "My App"

config = { host: "localhost", port: 8080, , secure: true }  // ERROR: invalid object literal, empty member between commas

enabled = ON
